--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,19 @@
 @import "tailwindcss";
 
+@theme {
+  --color-mode: class;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+}
+
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -23,4 +34,16 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@theme{
+  --color-gris-claro: hsl(0, 0%, 85%);
+}
+
+.light {
+  color-scheme: light;
+}
+
+.dark {
+  color-scheme: dark;
 }
